--- a/svxlink.conf
+++ b/svxlink.conf
@@ -5,6 +5,7 @@
 ###############################################################################
 
 # last edited: 26.05.2021 df2hs
+# last edited: 27.05.2021 PY2PCR
 
 [GLOBAL]
 #MODULE_PATH=/usr/lib/arm-linux-gnueabihf/svxlink
