--- a/svxlink.conf
+++ b/svxlink.conf
@@ -9,7 +9,7 @@
 
 [GLOBAL]
 #MODULE_PATH=/usr/lib/arm-linux-gnueabihf/svxlink
-LOGICS=RepeaterLogic,ReflectorLogic,ReflectorLogic2mLink
+LOGICS=RepeaterLogic,ReflectorLogic2mLink,ReflectorLogic
 CFG_DIR=svxlink.d
 TIMESTAMP_FORMAT="%c"
 CARD_SAMPLE_RATE=48000
@@ -23,7 +23,7 @@ RX=NetRx
 TX=MultiTx
 #MODULES=ModuleHelp,ModuleParrot,ModuleEchoLink,ModuleTclVoiceMail
 MODULES=ModuleParrot
-CALLSIGN=PY2KAK
+CALLSIGN=PY2KAR
 SHORT_IDENT_INTERVAL=10
 LONG_IDENT_INTERVAL=60
 #IDENT_ONLY_AFTER_TX=4
