--- a/svxreflector.conf
+++ b/svxreflector.conf
@@ -18,8 +18,8 @@ TG_FOR_V1_CLIENTS=999
 #HTTP_SRV_PORT=8080
 
 [USERS]
-PY2KAK-LinkTRX=MyNodes
-PY2KAK-10=MyNodes
+PY2KAR-LinkTRX=MyNodes
+PY2KAR-10=MyNodes
 
 [PASSWORDS]
 MyNodes="8ac1OPzUf7yb"
