--- a/svxlink.conf
+++ b/svxlink.conf
@@ -4,25 +4,24 @@
 #                                                                             #
 ###############################################################################
 
-# last edited: 26.05.2021 df2hs
 # last edited: 27.05.2021 PY2PCR
 
 [GLOBAL]
 #MODULE_PATH=/usr/lib/arm-linux-gnueabihf/svxlink
-LOGICS=RepeaterLogic,ReflectorLogic2mLink,ReflectorLogic
+LOGICS=RepeaterLogic,ReflectorLogic2mLink
 CFG_DIR=svxlink.d
 TIMESTAMP_FORMAT="%c"
 CARD_SAMPLE_RATE=48000
 CARD_CHANNELS=2
 #LOCATION_INFO=LocationInfo
-LINKS=NetLink,NetLink2m
+LINKS=NetLink2m
 
 [RepeaterLogic]
 TYPE=Repeater
-RX=NetRx
-TX=MultiTx
+RX=Voter
+TX=Tx1
 #MODULES=ModuleHelp,ModuleParrot,ModuleEchoLink,ModuleTclVoiceMail
-MODULES=ModuleParrot
+MODULES=ModuleParrot,ModuleEchoLink
 CALLSIGN=PY2KAR
 SHORT_IDENT_INTERVAL=10
 LONG_IDENT_INTERVAL=60
@@ -59,25 +58,6 @@ SQL_FLAP_SUP_MAX_COUNT=10
 #DTMF_CTRL_PTY=/dev/shm/repeater_dtmf_ctrl
 #CTCSS_TO_TG=77.0:999,123.0:9990,146.2:9992
 
-[ReflectorLogic]
-TYPE=Reflector
-HOST=2bs7fpf8ahdewu8a.myfritz.net
-PORT=5400
-CALLSIGN="PY2KAR"
-AUTH_KEY="svxtest"
-JITTER_BUFFER_DELAY=80
-DEFAULT_TG=800
-MONITOR_TGS=800
-TG_SELECT_TIMEOUT=300
-ANNOUNCE_REMOTE_MIN_INTERVAL=300
-EVENT_HANDLER=/usr/share/svxlink/events.tcl
-#NODE_INFO_FILE=/etc/svxlink/node_info.json
-MUTE_FIRST_TX_LOC=0
-MUTE_FIRST_TX_REM=0
-#TMP_MONITOR_TIMEOUT=3600
-#UDP_HEARTBEAT_INTERVAL=15
-QSY_PENDING_TIMEOUT=15
-
 [ReflectorLogic2mLink]
 TYPE=Reflector
 HOST=127.0.0.1
@@ -96,12 +76,6 @@ MUTE_FIRST_TX_REM=0
 #TMP_MONITOR_TIMEOUT=3600
 #UDP_HEARTBEAT_INTERVAL=15
 QSY_PENDING_TIMEOUT=15
-
-[NetLink]
-CONNECT_LOGICS=RepeaterLogic:8:MAX,ReflectorLogic:99
-DEFAULT_ACTIVE=1
-#TIMEOUT=300
-#ACTIVATE_ON_ACTIVITY=RepeaterLogic
 
 [NetLink2m]
 CONNECT_LOGICS=RepeaterLogic:9:LINK,ReflectorLogic2mLink:92
@@ -127,11 +101,11 @@ MAX_DIRSIZE=1024
 
 [Voter]
 TYPE=Voter
-RECEIVERS=NetRx,NetRx2mLink
+RECEIVERS=NetRx
 VOTING_DELAY=200
 BUFFER_LENGTH=0
 #REVOTE_INTERVAL=1000
-#HYSTERESIS=50
+HYSTERESIS=50
 #SQL_CLOSE_REVOTE_DELAY=500
 #RX_SWITCH_DELAY=500
 #COMMAND_PTY=/dev/shm/voter_ctrl
