--- a/svxlink.d/ModuleEchoLink.conf
+++ b/svxlink.d/ModuleEchoLink.conf
@@ -1,7 +1,7 @@
 [ModuleEchoLink]
 NAME=EchoLink
 ID=2
-TIMEOUT=60
+TIMEOUT=600
 #MUTE_LOGIC_LINKING=1
 #ALLOW_IP=192.168.1.0/24
 #DROP_ALL_INCOMING=0
@@ -13,10 +13,10 @@ TIMEOUT=60
 #REJECT_CONF=0
 #CHECK_NR_CONNECTS=2,300,120
 SERVERS=servers.echolink.org
-CALLSIGN=MYCALL-L
-PASSWORD=MyPass
-SYSOPNAME=MyName
-LOCATION=[Svx] Fq, MyTown
+CALLSIGN=PY2KAR-R
+PASSWORD=chocolate
+SYSOPNAME=Ricardo
+LOCATION=[Svx] 29.630, GG68CU
 #PROXY_SERVER=the.proxy.server
 #PROXY_PORT=8100
 #PROXY_PASSWORD=PUBLIC
@@ -30,14 +30,9 @@ LINK_IDLE_TIMEOUT=300
 #DEFAULT_LANG=en_US
 #COMMAND_PTY=/dev/shm/echolink_ctrl
 #REMOTE_RGR_SOUND=0
-DESCRIPTION="You have connected to a SvxLink node,\n"
-	    "a voice services system for Linux with EchoLink\n"
-	    "support.\n"
-	    "Check out http://svxlink.sf.net/ for more info\n"
+DESCRIPTION="Welcome to PY2ERA\n"
+	    "Check out http://www.hambrasil.com.br/PY2ERA for more info\n"
 	    "\n"
-	    "QTH:     My_QTH\n"
-	    "QRG:     Simplex link on ???.??? MHz\n"
-	    "CTCSS:   My_CTCSS_fq_if_any Hz\n"
-	    "Trx:     My_transceiver_type\n"
-	    "Antenna: My_antenna_brand/type/model\n"
+	    "LOC:     GG68CU\n"
+	    "QRG:     29.630 MHz\n"
 
