--- a/svxlink.conf
+++ b/svxlink.conf
@@ -23,14 +23,14 @@ TX=Tx1
 #MODULES=ModuleHelp,ModuleParrot,ModuleEchoLink,ModuleTclVoiceMail
 MODULES=ModuleParrot,ModuleEchoLink
 CALLSIGN=PY2KAR
-SHORT_IDENT_INTERVAL=10
-LONG_IDENT_INTERVAL=60
+#SHORT_IDENT_INTERVAL=1
+LONG_IDENT_INTERVAL=15
 #IDENT_ONLY_AFTER_TX=4
 #EXEC_CMD_ON_SQL_CLOSE=500
 EVENT_HANDLER=/usr/share/svxlink/events.tcl
 DEFAULT_LANG=en_US
 RGR_SOUND_DELAY=0
-#REPORT_CTCSS=136.5
+#REPORT_CTCSS=82.5
 #TX_CTCSS=SQL_OPEN
 MACROS=Macros
 #SEL5_MACRO_RANGE=03400,03499
@@ -96,7 +96,7 @@ SOFT_TIME=300
 MAX_DIRSIZE=1024
 #DEFAULT_ACTIVE=1
 #TIMEOUT=300
-#QSO_TIMEOUT=300
+#QSO_TIMEOUT=10
 #ENCODER_CMD=/usr/bin/oggenc -Q \"%f\" && rm \"%f\"
 
 [Voter]
@@ -264,8 +264,8 @@ PTT_PIN=gpio24
 #SERIAL_SET_PINS=DTR!RTS
 GPIO_PATH=/sys/class/gpio
 PTT_HANGTIME=1000
-#TIMEOUT=300
-TX_DELAY=100
+TIMEOUT=180
+TX_DELAY=50
 #CTCSS_FQ=136.5
 #CTCSS_LEVEL=9
 PREEMPHASIS=0
