--- a/svxlink.d/ModuleEchoLink.conf
+++ b/svxlink.d/ModuleEchoLink.conf
@@ -3,7 +3,7 @@ NAME=EchoLink
 ID=2
 TIMEOUT=600
 #MUTE_LOGIC_LINKING=1
-#ALLOW_IP=192.168.1.0/24
+#ALLOW_IP=10.0.0.1/17
 #DROP_ALL_INCOMING=0
 #DROP_INCOMING=^()$
 #REJECT_INCOMING=^()$
@@ -15,8 +15,8 @@ TIMEOUT=600
 SERVERS=servers.echolink.org
 CALLSIGN=PY2KAR-R
 PASSWORD=chocolate
-SYSOPNAME=Ricardo
-LOCATION=[Svx] 29.630, GG68CU
+SYSOPNAME=PY2PCR
+LOCATION=[CRRP] 146.670, GG68CU
 #PROXY_SERVER=the.proxy.server
 #PROXY_PORT=8100
 #PROXY_PASSWORD=PUBLIC
@@ -26,13 +26,13 @@ MAX_CONNECTIONS=11
 LINK_IDLE_TIMEOUT=300
 #AUTOCON_ECHOLINK_ID=9999
 #AUTOCON_TIME=1200
-#USE_GSM_ONLY=1
-#DEFAULT_LANG=en_US
+USE_GSM_ONLY=1
+DEFAULT_LANG=pt_BR
 #COMMAND_PTY=/dev/shm/echolink_ctrl
 #REMOTE_RGR_SOUND=0
 DESCRIPTION="Welcome to PY2ERA\n"
-	    "Check out http://www.hambrasil.com.br/PY2ERA for more info\n"
+	    "Check out http://casadoradioamador.org.br for more info\n"
 	    "\n"
 	    "LOC:     GG68CU\n"
-	    "QRG:     29.630 MHz\n"
+	    "QRG:     146.670 MHz \n"
 
