--- a/svxreflector.conf
+++ b/svxreflector.conf
@@ -10,8 +10,9 @@
 #CFG_DIR=svxreflector.d
 TIMESTAMP_FORMAT="%c"
 LISTEN_PORT=5302
-#SQL_TIMEOUT=600
+#SQL_TIMEOUT=1
 #SQL_TIMEOUT_BLOCKTIME=60
+#SQL_OFF_TIMEOUT = 1500
 CODECS=OPUS
 TG_FOR_V1_CLIENTS=999
 #RANDOM_QSY_RANGE=12399:100
