py2kar to py2koa

--- a/svxreflector.conf
+++ b/svxreflector.conf
@@ -19,8 +19,8 @@ TG_FOR_V1_CLIENTS=999
 #HTTP_SRV_PORT=8080
 
 [USERS]
-PY2KAR-LinkTRX=MyNodes
-PY2KAR-10=MyNodes
+PY2KOA-LinkTRX=MyNodes
+PY2KOA-10=MyNodes
 
 [PASSWORDS]
 MyNodes="8ac1OPzUf7yb"
