--- a/svxlink.conf
+++ b/svxlink.conf
@@ -22,7 +22,7 @@ RX=Voter
 TX=Tx1
 #MODULES=ModuleHelp,ModuleParrot,ModuleEchoLink,ModuleTclVoiceMail
 MODULES=ModuleParrot,ModuleEchoLink
-CALLSIGN=PY2KAR
+CALLSIGN=PY2KOA
 #SHORT_IDENT_INTERVAL=1
 LONG_IDENT_INTERVAL=15
 #IDENT_ONLY_AFTER_TX=4
@@ -62,7 +62,7 @@ SQL_FLAP_SUP_MAX_COUNT=10
 TYPE=Reflector
 HOST=127.0.0.1
 PORT=5302
-CALLSIGN=PY2KAR-10
+CALLSIGN=PY2KOA-10
 AUTH_KEY="8ac1OPzUf7yb"
 JITTER_BUFFER_DELAY=80
 DEFAULT_TG=999
