--- a/svxlink.conf
+++ b/svxlink.conf
@@ -21,7 +21,8 @@ TYPE=Repeater
 RX=Voter
 TX=Tx1
 #MODULES=ModuleHelp,ModuleParrot,ModuleEchoLink,ModuleTclVoiceMail
-MODULES=ModuleParrot,ModuleEchoLink
+MODULES=ModuleParrot
+#ModuleEchoLink
 CALLSIGN=PY2KOA
 #SHORT_IDENT_INTERVAL=1
 LONG_IDENT_INTERVAL=15
