--- a/svxlink.d/ModuleEchoLink.conf
+++ b/svxlink.d/ModuleEchoLink.conf
@@ -13,7 +13,7 @@ TIMEOUT=600
 #REJECT_CONF=0
 #CHECK_NR_CONNECTS=2,300,120
 SERVERS=servers.echolink.org
-CALLSIGN=PY2KAR-R
+CALLSIGN=PY2KOA-R
 PASSWORD=chocolate
 SYSOPNAME=PY2PCR
 LOCATION=[CRRP] 146.670, GG68CU
@@ -30,7 +30,7 @@ USE_GSM_ONLY=1
 DEFAULT_LANG=pt_BR
 #COMMAND_PTY=/dev/shm/echolink_ctrl
 #REMOTE_RGR_SOUND=0
-DESCRIPTION="Welcome to PY2ERA\n"
+DESCRIPTION="Welcome to PY2KOA\n"
 	    "Check out http://casadoradioamador.org.br for more info\n"
 	    "\n"
 	    "LOC:     GG68CU\n"
