--- a/svxreflector.conf
+++ b/svxreflector.conf
@@ -21,6 +21,8 @@ TG_FOR_V1_CLIENTS=999
 [USERS]
 PY2KOA-LinkTRX=MyNodes
 PY2KOA-10=MyNodes
+PY2KAR-EchoLink=MyNodes
+Ricardo-teste=MyNodes
 
 [PASSWORDS]
 MyNodes="8ac1OPzUf7yb"
