--- a/svxlink.d/ModuleEchoLink.conf
+++ b/svxlink.d/ModuleEchoLink.conf
@@ -14,7 +14,7 @@ TIMEOUT=600
 #CHECK_NR_CONNECTS=2,300,120
 SERVERS=servers.echolink.org
 CALLSIGN=PY2KOA-R
-PASSWORD=chocolate
+PASSWORD=****
 SYSOPNAME=PY2PCR
 LOCATION=[CRRP] 146.670, GG68CU
 #PROXY_SERVER=the.proxy.server
