--- a/svxlink.d/ModuleEchoLink.conf
+++ b/svxlink.d/ModuleEchoLink.conf
@@ -3,7 +3,7 @@ NAME=EchoLink
 ID=2
 TIMEOUT=600
 #MUTE_LOGIC_LINKING=1
-#ALLOW_IP=10.0.0.1/17
+ALLOW_IP=10.0.0.1/17
 #DROP_ALL_INCOMING=0
 #DROP_INCOMING=^()$
 #REJECT_INCOMING=^()$
@@ -13,17 +13,17 @@ TIMEOUT=600
 #REJECT_CONF=0
 #CHECK_NR_CONNECTS=2,300,120
 SERVERS=servers.echolink.org
-CALLSIGN=PY2KOA-R
-PASSWORD=****
+CALLSIGN=PY2KAR-R
+PASSWORD=chocolate
 SYSOPNAME=PY2PCR
 LOCATION=[CRRP] 146.670, GG68CU
 #PROXY_SERVER=the.proxy.server
 #PROXY_PORT=8100
 #PROXY_PASSWORD=PUBLIC
 #BIND_ADDR=10.20.30.40
-MAX_QSOS=10
-MAX_CONNECTIONS=11
-LINK_IDLE_TIMEOUT=300
+MAX_QSOS=100
+MAX_CONNECTIONS=30
+LINK_IDLE_TIMEOUT=60
 #AUTOCON_ECHOLINK_ID=9999
 #AUTOCON_TIME=1200
 USE_GSM_ONLY=1
