--- a/svxreflector.conf
+++ b/svxreflector.conf
@@ -21,7 +21,7 @@ TG_FOR_V1_CLIENTS=999
 [USERS]
 PY2KOA-LinkTRX=MyNodes
 PY2KOA-10=MyNodes
-PY2KAR-EchoLink=MyNodes
+PY2KAR=MyNodes
 Ricardo-teste=MyNodes
 
 [PASSWORDS]
