--- a/svxlink.conf
+++ b/svxlink.conf
@@ -8,7 +8,7 @@
 
 [GLOBAL]
 #MODULE_PATH=/usr/lib/arm-linux-gnueabihf/svxlink
-LOGICS=RepeaterLogic,ReflectorLogic2mLink
+LOGICS=RepeaterLogic,ReflectorLogicCRRP
 CFG_DIR=svxlink.d
 TIMESTAMP_FORMAT="%c"
 CARD_SAMPLE_RATE=48000
@@ -59,12 +59,17 @@ SQL_FLAP_SUP_MAX_COUNT=10
 #DTMF_CTRL_PTY=/dev/shm/repeater_dtmf_ctrl
 #CTCSS_TO_TG=77.0:999,123.0:9990,146.2:9992
 
-[ReflectorLogic2mLink]
+[ReflectorLogicCRRP]
+#TYPE=Reflector
+#HOST=127.0.0.1
+#PORT=5302
+#CALLSIGN=PY2KOA-10
+#AUTH_KEY="8ac1OPzUf7yb"
 TYPE=Reflector
-HOST=127.0.0.1
-PORT=5302
-CALLSIGN=PY2KOA-10
-AUTH_KEY="8ac1OPzUf7yb"
+HOST=191.209.73.99
+PORT=55300
+CALLSIGN="PY2KOA"
+AUTH_KEY="8ac1aerhga5465OPzUf7yb"
 JITTER_BUFFER_DELAY=80
 DEFAULT_TG=999
 MONITOR_TGS=999
@@ -78,8 +83,10 @@ MUTE_FIRST_TX_REM=0
 #UDP_HEARTBEAT_INTERVAL=15
 QSY_PENDING_TIMEOUT=15
 
+
 [NetLink2m]
-CONNECT_LOGICS=RepeaterLogic:9:LINK,ReflectorLogic2mLink:92
+CONNECT_LOGICS=RepeaterLogic:9:LINK,ReflectorLogicCRRP:99:LINK
+#CONNECT_LOGICS=RepeaterLogic:9:LINK,ReflectorLogicCRRP:92
 DEFAULT_ACTIVE=1
 #TIMEOUT=300
 #ACTIVATE_ON_ACTIVITY=RepeaterLogic
