--- a/svxlink.conf
+++ b/svxlink.conf
@@ -60,16 +60,16 @@ SQL_FLAP_SUP_MAX_COUNT=10
 #CTCSS_TO_TG=77.0:999,123.0:9990,146.2:9992
 
 [ReflectorLogicCRRP]
-#TYPE=Reflector
-#HOST=127.0.0.1
-#PORT=5302
-#CALLSIGN=PY2KOA-10
-#AUTH_KEY="8ac1OPzUf7yb"
 TYPE=Reflector
-HOST=191.209.73.99
-PORT=55300
-CALLSIGN="PY2KOA"
-AUTH_KEY="8ac1aerhga5465OPzUf7yb"
+HOST=127.0.0.1
+PORT=5302
+CALLSIGN=PY2KOA-10
+AUTH_KEY="8ac1OPzUf7yb"
+#TYPE=Reflector
+#HOST=191.209.73.99
+#PORT=55300
+#CALLSIGN="PY2KOA"
+#AUTH_KEY="8ac1aerhga5465OPzUf7yb"
 JITTER_BUFFER_DELAY=80
 DEFAULT_TG=999
 MONITOR_TGS=999
@@ -85,8 +85,8 @@ QSY_PENDING_TIMEOUT=15
 
 
 [NetLink2m]
-CONNECT_LOGICS=RepeaterLogic:9:LINK,ReflectorLogicCRRP:99:LINK
-#CONNECT_LOGICS=RepeaterLogic:9:LINK,ReflectorLogicCRRP:92
+#CONNECT_LOGICS=RepeaterLogic:9:LINK,ReflectorLogicCRRP:92:LINK
+CONNECT_LOGICS=RepeaterLogic:9:LINK,ReflectorLogicCRRP:92
 DEFAULT_ACTIVE=1
 #TIMEOUT=300
 #ACTIVATE_ON_ACTIVITY=RepeaterLogic
