--- a/svxlink.d/ModuleEchoLink.conf
+++ b/svxlink.d/ModuleEchoLink.conf
@@ -13,8 +13,8 @@ ALLOW_IP=10.0.0.1/17
 #REJECT_CONF=0
 #CHECK_NR_CONNECTS=2,300,120
 SERVERS=servers.echolink.org
-CALLSIGN=PY2KAR-R
-PASSWORD=chocolate
+CALLSIGN=PY2KOA-R
+PASSWORD=*
 SYSOPNAME=PY2PCR
 LOCATION=[CRRP] 146.670, GG68CU
 #PROXY_SERVER=the.proxy.server
